--- a/config/database.yml
+++ b/config/database.yml
@@ -12,6 +12,7 @@ default: &default
 development:
   <<: *default
   database: development
+  username: postgres
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -23,3 +24,5 @@ test:
 production:
   <<: *default
   database: production
+  user: ENV["DB_USER"]
+  pass: ENV["DB_PASS"]
