--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -135,3 +135,11 @@ test:
         read:
           mode: :primary
         max_pool_size: 1
+test:
+  clients:
+    default:
+      database: base_app_production
+        uri: <%= ENV['MONGOLAB_URI'] %>
+        options:
+          safe: true
+          skip_version_check: true
